--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only --exit-child src/app.ts",
-    "migrate": "npx prisma migrate dev --name user-entity && npx prisma generate",
-    "push": "npx prisma db push",
-    "build": "tsc . -p"
+    "prisma:migrate": "npx prisma migrate dev --name user-entity && npx prisma generate",
+    "prisma:push": "npx prisma db push",
+    "build": "tsc . -p",
+    "prisma:reset-db": "npx prisma mirgrate reset"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -34,6 +35,7 @@
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "i18next": "^22.0.1",
     "jsonwebtoken": "^8.5.1",
     "redis": "^4.3.1",
     "ts-node-dev": "^2.0.0",
